concord_macros/tests/trybuild/fail/pagination/pagination_unknown_field_cursor.stderr
error: unknown pagination field `offset` for CursorPagination; allowed fields: cursor_key, per_page_key, cursor, per_page, send_cursor_on_first, stop_when_cursor_missing
  --> tests/trybuild/fail/pagination/pagination_unknown_field_cursor.rs:15:13
   |
15 |             offset = count,
   |             ^^^^^^
